--- a/eks-deploy-k8s.yaml
+++ b/eks-deploy-k8s.yaml
@@ -5,7 +5,7 @@ metadata:
     app: springboot-app
   name: springboot-app
 spec:
-  replicas: 4
+  replicas: 1
   selector:
     matchLabels:
       app: springboot-app
@@ -37,6 +37,7 @@ spec:
     port: 80
     protocol: TCP
     targetPort: 8085
-  type: LoadBalancer
+    nodePort: 30000
+  type: NodePort
   selector:
     app: springboot-app
